--- a/racket_stringer/templates/racket_stringer/base.html
+++ b/racket_stringer/templates/racket_stringer/base.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" type="image/png" href="{% static 'racket_stringer/img/favicon.ico' %}"/>
     <link rel="stylesheet" href="{% static "racket_stringer/css/bootstrap.min.css" %}">
     <link rel="stylesheet" href="{% static "racket_stringer/css/select2.min.css" %}">
+    <link rel="stylesheet" href="{% static "racket_stringer/css/flatpickr.min.css" %}">
     {% block extra_css %}
     {% endblock extra_css %}
   </head>
@@ -21,6 +22,7 @@
     <script src="{% static "racket_stringer/js/popper.min.js" %}"></script>
     <script src="{% static "racket_stringer/js/bootstrap.min.js" %}"></script>
     <script src="{% static "racket_stringer/js/select2.min.js" %}"></script>
+    <script src="{% static "racket_stringer/js/flatpickr.min.js" %}"></script>
     {% block extra_js %}
     {% endblock extra_js %}
   </body>
