--- a/racket_stringer/templates/racket_stringer/my_orders.html
+++ b/racket_stringer/templates/racket_stringer/my_orders.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <div class="row">
-    <div class="col mt-3">
-        <div class="card bg-light shadow-sm ">
+    <div class="col">
+        <div class="card">
             <div class="card-header">My Orders</div>
             <div class="card-body">
                 <div class="row">
