--- a/racket_stringer/templates/racket_stringer/new_customer.html
+++ b/racket_stringer/templates/racket_stringer/new_customer.html
@@ -2,9 +2,9 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="row mt-3">
+<div class="row">
     <div class="col">
-        <div class="card bg-light shadow-sm ">
+        <div class="card">
             <div class="card-header">Create a New Customer</div>
             <div class="card-body">
                 {% crispy form %}
