--- a/racket_stringer/templates/racket_stringer/update_order.html
+++ b/racket_stringer/templates/racket_stringer/update_order.html
@@ -2,10 +2,10 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="row mt-3">
+<div class="row">
     <div class="col">
-        <div class="card bg-light shadow-sm ">
-            <div class="card-header">Update Order - {{ object }}</div>
+        <div class="card">
+            <div class="card-header">Update Order: {{ object }}</div>
             <div class="card-body">
                 {% crispy form %}
             </div>
@@ -15,10 +15,5 @@
 {% endblock content %}
 
 {% block extra_js %}
-{% include "racket_stringer/order_form_select2_ajax.html" %}
-<script>
-$(document).ready(function() {
-    $("#id_due_date").flatpickr();
-});
-</script>
+{% include "racket_stringer/order_form_js.html" %}
 {% endblock extra_js %}
