--- a/racket_stringer/templates/registration/login.html
+++ b/racket_stringer/templates/registration/login.html
@@ -1,9 +1,9 @@
 {% extends 'racket_stringer/base.html' %}
 
 {% block content %}
-<div class="row mt-3">
+<div class="row">
     <div class="col">
-        <div class="card bg-light shadow-sm ">
+        <div class="card">
             <div class="card-header">Login</div>
             <div class="card-body">
                 <div class="row mt-3">
