rename orders page

--- a/racket_stringer/templates/racket_stringer/top_navbar.html
+++ b/racket_stringer/templates/racket_stringer/top_navbar.html
@@ -7,7 +7,7 @@
         {% if request.user.is_authenticated %}
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'my_orders' %}">My Orders</a>
+                <a class="nav-link" href="{% url 'orders' %}">Orders</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'new_customer' %}">New Customer</a>
