--- a/racket_stringer/templates/racket_stringer/delete_order.html
+++ b/racket_stringer/templates/racket_stringer/delete_order.html
@@ -5,15 +5,16 @@
 <div class="row">
     <div class="col">
         <div class="card">
-            <div class="card-header">Delete Order:  {{ object }}</div>
+            <div class="card-header">Delete Order</div>
             <div class="card-body">
-                <div class="row mt-2">
-                    <div class="col-sm-6 mx-auto">
-                        <form method="post">{% csrf_token %}
+                <div class="row">
+                    <div class="col-sm-8 mx-auto">
+                        <form method="post">
+                            {% csrf_token %}
                             <div class="text-center">
-                            <p>Are you sure you want to delete "{{ object }}"?</p>
-                            <a class="btn btn-info" href="{% url 'show_order' object.id %}" role="button">No, go back.</a>
-                            <input class="btn btn-danger" type="submit" value="Yes, delete." />
+                                <p>Are you sure you want to delete "{{ object }}"?</p>
+                                <a class="btn btn-info" href="{% url 'show_order' object.id %}" role="button">No, go back.</a>
+                                <input class="btn btn-danger" type="submit" value="Yes, delete." />
                             </div>
                         </form>
                     </div>
