--- a/racket_stringer/static/racket_stringer/css/app.css
+++ b/racket_stringer/static/racket_stringer/css/app.css
@@ -1,81 +1,3 @@
-/*
- * colors
- * light background:  #F8F4F7
- * accent 1:          #72827F
- * main:              #73B7AF
- * accent 2:          #114D6A
- * dark background:   #34333F
- */
-
-a {
-    color: #114D6A;
-}
-
-body {
-    background-color: #34333F;
-    color: #556F72;
-    font-weight: 600;
-    line-height: 1.1em;
-}
-
 .container {
-    width: 100%;
-    padding-right: 0;
-    padding-left: 0;
-}
-
-.form-control {
-    color: #556F72;
-    font-weight: 600;
-}
-
-.navbar {
-    background-color: #73B7AF;
-}
-
-.card {
-    background-color: #EEEFEF;
-    border-radius: 0;
-}
-
-.btn-primary {
-    background-color: #71b9ad;
-    border-color: #71b9ad;
-}
-.btn-primary:hover {
-    background-color: #114D6A;
-}
-
-.btn-info {
-    background-color: #342e3a;
-    border-color: #342e3a;
-}
-
-.btn-success {
-    background-color: #57b26c;
-    border-color: #57b26c;
-}
-
-.btn-danger {
-    background-color: #f44336;
-    border-color: #f44336;
-}
-
-.btn-warning {
-    background-color: #e0a800;
-    border-color: #e0a800;
-    color: #fff;
-}
-.btn-warning:hover {
-    background-color: #d4a234;
-    color: #fff;
-}
-
-.row {
-    margin-right: 0;
-    margin-left: 0;
-}
-.col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
-    padding-right: 0;
-    padding-left: 0;
+    max-width: 768px
 }
