--- a/racket_stringer/templates/racket_stringer/new_customer.html
+++ b/racket_stringer/templates/racket_stringer/new_customer.html
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col">
         <div class="card">
-            <div class="card-header">Create a New Customer</div>
+            <div class="card-header">New Customer</div>
             <div class="card-body">
                 {% crispy form %}
             </div>
