--- a/racket_stringer/templates/registration/login.html
+++ b/racket_stringer/templates/registration/login.html
@@ -6,17 +6,20 @@
         <div class="card">
             <div class="card-header">Login</div>
             <div class="card-body">
-                <div class="row mt-3">
-                    <div class="col-sm-4 mx-auto">
+                <div class="row">
+                    <div class="col-sm-6 mx-auto">
                         <form method="post">
-                            <div class="form-group">
-                                {% csrf_token %}
-                                <label for="id_username" class="sr-only">Username</label>
-                                <input type="text" id="id_username" name="username" class="form-control" placeholder="Username" required autofocus>
-                                <label for="id_password" class="sr-only">Password</label>
-                                <input type="password" id="id_password" name="password" class="form-control" placeholder="Password" required>
+                            {% csrf_token %}
+                            <div class="form-floating">
+                                <input type="text" id="id_username" name="username" class="form-control" placeholder="username">
+                                <label for="id_username">Username</label>
                             </div>
-                            <button class="btn btn-primary float-right" type="submit">Submit</button>
+                            <div class="mb-3 form-floating">
+                                <input type="password" id="id_password" name="password" class="form-control" placeholder="Password">
+                                <label for="id_password">Password</label>
+                            </div>
+
+                            <button class="btn btn-primary float-end" type="submit">Login</button>
                         </form>
                     </div>
                 </div>
