--- a/racket_stringer/templates/racket_stringer/orders.html
+++ b/racket_stringer/templates/racket_stringer/orders.html
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col">
         <div class="card">
-            <div class="card-header">Orders</div>
+            <div class="card-header">Search Past Orders</div>
             <div class="card-body">
                 <div class="row">
                     <div class="col">
@@ -22,7 +22,7 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <div class="card">
+                        <div class="card border-primary">
                             <div class="card-body">
                                 <h5 class="card-title">Search Results</h5>
                                 <div class="table-responsive">
