--- a/racket_stringer/templates/racket_stringer/top_navbar.html
+++ b/racket_stringer/templates/racket_stringer/top_navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
     <div class="container-fluid">
         <a class="navbar-brand" href="">Racket Stringer</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -8,15 +8,14 @@
             {% if request.user.is_authenticated %}
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'orders' %}">Orders</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="{% url 'new_customer' %}">New Customer</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'new_order' %}">New Order</a>
                 </li>
-
+                <li class="nav-item ">
+                    <a class="nav-link" href="{% url 'orders' %}">Search Past Orders</a>
+                </li>
             </ul>
             {% endif %}
             <ul class="navbar-nav">
