add new string form

--- a/racket_stringer/templates/racket_stringer/top_navbar.html
+++ b/racket_stringer/templates/racket_stringer/top_navbar.html
@@ -11,10 +11,13 @@
                     <a class="nav-link" href="{% url 'new_customer' %}">New Customer</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'new_order' %}">New Order</a>
+                    <a class="nav-link" href="{% url 'new_string' %}">New String</a>
                 </li>
                 <li class="nav-item ">
                     <a class="nav-link" href="{% url 'orders' %}">Search Past Orders</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'new_order' %}">New Order</a>
                 </li>
             </ul>
             {% endif %}
