update django to 5.2.1

--- a/racket_stringer/templates/racket_stringer/orders.html
+++ b/racket_stringer/templates/racket_stringer/orders.html
@@ -30,7 +30,7 @@
                                         <thead>
                                             <tr>
                                                 <th scope="col">Customer</th>
-                                                <th scope="col">Due</th>
+                                                <th scope="col">Due Date</th>
                                                 <th scope="col">Stringer</th>
                                                 <th scope="col">Created On</th>
                                             </tr>
